@@ -1,0 +1,8 @@
+CORE
+p-command-line-option2.v
+--bound 1 -p "0"
+^EXIT=10$
+^SIGNAL=0$
+^\[command-line assertion\] always 0: REFUTED$
+--
+^warning: ignoring
