@@ -1,0 +1,3 @@
+module main(input clk);
+
+endmodule
